--- a/src/applications/facility-locator/sass/facility-locator.scss
+++ b/src/applications/facility-locator/sass/facility-locator.scss
@@ -220,7 +220,7 @@ $text-color: rgba(27, 27, 27, 1);
   }
 
   .search-controls-container {
-    padding: 24px 16px 0 12px;
+    padding: 24px 16px 0;
     border: solid thin var(--vads-color-base-lightest);
     background: var(--vads-color-base-lightest);
 
@@ -232,13 +232,27 @@ $text-color: rgba(27, 27, 27, 1);
       display: flex;
       flex-direction: column;
 
+      & > div > div {
+        margin-bottom: 24px;
+      }
+
+      input, select {
+        height: 40px;
+      }
+
+      va-select::part(label) {
+        margin-top: 0;
+      }
+
+      input, select, va-select {
+        margin-bottom: 0;
+      }
+
       input,
-      textarea,
       select,
       va-select,
       .input-container {
         max-width: none;
-        margin-bottom: 24px;
         padding: 0 0.7em;
 
         @media (min-width: $small-desktop-screen) {
@@ -248,9 +262,9 @@ $text-color: rgba(27, 27, 27, 1);
         }
       }
 
-      #vamc-services {
-        @media (min-width: $small-desktop-screen) {
-          margin-bottom: 0;
+      #facility-type-dropdown::part(select) {
+        @media (max-width: $small-desktop-screen) {
+          max-width: 100%;
         }
       }
 
@@ -311,11 +325,23 @@ $text-color: rgba(27, 27, 27, 1);
       }
 
       #search-controls-bottom-row {
+        & > div {
+          margin-bottom: 24px;
+
+          @media (min-width: $small-desktop-screen) {
+            margin-bottom: 0;
+          }
+        }
+
         @media (min-width: $small-desktop-screen) {
           display: flex;
-          margin-top: -24px;
           flex-direction: row;
         }
+      }
+
+      #facility-search {
+        margin-right: 0;
+        margin-bottom: 0;
       }
     }
   }
